// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskItem.vue renders correctly and matches the snapshot 1`] = `
<li
  class="taskItem"
>
  <label
    class="taskLabel"
    for="1"
  >
    <input-checkbox-stub
      checked="false"
      disabled="false"
      id="1"
    />
    <div
      class="taskDescription"
    >
      <span
        class="taskTitle"
      >
        Task 1
      </span>
      <app-button-stub
        customclass="deleteButton"
      />
    </div>
  </label>
</li>
`;

exports[`TaskItem.vue renders with checked state 1`] = `
<li
  class="taskItem"
>
  <label
    class="taskLabel"
    for="1"
  >
    <input-checkbox-stub
      checked="true"
      disabled="false"
      id="1"
    />
    <div
      class="taskDescription"
    >
      <span
        class="taskTitle"
      >
        Task 1
      </span>
      <app-button-stub
        customclass="deleteButton"
      />
    </div>
  </label>
</li>
`;
